# ImomI

./: CMakeLists.txt
Assets/: blur.fs  crt.fs  level0.mid  threshold.fs
src/: animation_test.cpp2  camera_test.cpp  main.cpp  main.cpp2  midi.cpp  midi.h
